# dosgame

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: efcm.pcx
include/allegro/platform/: alplatf.h
lib/: alleg.lib
src/: gdb.c  gdb.h  main.c  main.cpp
